--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,12 @@ BACKEND_DOMAIN=http://localhost:3000
 
 DATABASE_URL=
 DATABASE_TYPE=mysql
-DATABASE_HOST=nra
+DATABASE_HOST=nest-rest-mysql
 DATABASE_PORT=3306
-DATABASE_USERNAME=nra-user
-DATABASE_PASSWORD=nra-user-password
-DATABASE_ROOT_PASSWORD=nra-root-password
-DATABASE_NAME=nra
+DATABASE_USERNAME=nest-rest-user
+DATABASE_PASSWORD=nest-rest-user-password
+DATABASE_ROOT_PASSWORD=nest-rest-root-password
+DATABASE_NAME=nestrest
 DATABASE_SYNCHRONIZE=true
 
 AUTH_JWT_SECRET=100540
