--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,10 @@ DATABASE_URL=
 DATABASE_TYPE=mysql
 DATABASE_HOST=nest-rest-mysql
 DATABASE_PORT=3306
+DATABASE_PORT_EXPORT=3366
 DATABASE_USERNAME=nest-rest-user
 DATABASE_PASSWORD=nest-rest-user-password
+DATABASE_ROOT_HOST=%
 DATABASE_ROOT_PASSWORD=nest-rest-root-password
 DATABASE_NAME=nestrest
 DATABASE_SYNCHRONIZE=true
