--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,19 @@ services:
       - nest-rest-network-link
     depends_on:
       - nest-rest-mysql
-    entrypoint: ["tail", "-f", "/dev/null"]
+    entrypoint: ['tail', '-f', '/dev/null']
 
   nest-rest-mysql:
     image: mysql:5.7
     container_name: ${DATABASE_HOST}
     restart: unless-stopped
     ports:
-      - "3306:3306"
+      - '${DATABASE_PORT_EXPORT}:${DATABASE_PORT}'
     environment:
       MYSQL_DATABASE: '${DATABASE_NAME}'
       MYSQL_USER: '${DATABASE_USERNAME}'
       MYSQL_PASSWORD: '${DATABASE_PASSWORD}'
+      MYSQL_ROOT_HOST: '${DATABASE_ROOT_HOST}'
       MYSQL_ROOT_PASSWORD: '${DATABASE_ROOT_PASSWORD}'
     networks:
       - nest-rest-network-link
